--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
       name="description"
       content="Versión de la página web de Lola Índigo."
     />
-    <meta
-      name="keywords"
-      content="Lola Índigo, tienda"
-    />
+    <meta name="keywords" content="Lola Índigo, tienda" />
     <link rel="icon" type="image/svg+xml" href="/icons/grx.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lola Índigo - Web</title>
+    <title>Lola Índigo | Web</title>
   </head>
   <body>
     <div id="app"></div>
