Modificado SPA y añadido JSON Server

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
       content="Versión de la página web de Lola Índigo."
     />
     <meta name="keywords" content="Lola Índigo, tienda" />
-    <link rel="icon" type="image/svg+xml" href="/icons/grx.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/darvwfw0u/image/upload/v1742485976/grx_yxqidg.svg"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/augmented-ui@2/augmented-ui.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lola Índigo | Web</title>
   </head>
