Modificado index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="author" content="Marina López" />
     <meta
       name="description"
-      content="Versión de la página web de Lola Índigo."
+      content="Sitio web no oficial de Lola Índigo, cantante, bailarina y colaboradora en programas de TV. Acceso a sus perfiles oficiales en redes sociales."
     />
-    <meta name="keywords" content="Lola Índigo, tienda" />
     <link
       rel="icon"
       type="image/svg+xml"
@@ -17,6 +16,10 @@
       rel="stylesheet"
       type="text/css"
       href="https://unpkg.com/augmented-ui@2/augmented-ui.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lola Índigo | Web</title>
